--- a/WebContent/bootstrap/css/estilo.css
+++ b/WebContent/bootstrap/css/estilo.css
@@ -12,8 +12,32 @@ body{
 	width: 350px;
 	margin-top:120px;
 }
+#vinculos:{
+	margin-top:100;
+}
 #containerTitle{
 		width: 350px;
+}
+a:link {
+	color:#808040;
+	}
+
+a:hover {
+	
+font-size:20px;
+color:#100;
+}
+#containerIndex{
+		width: 200px;
+		margin-top:120px;
+		background:#b7e8ff;
+		
+}
+h1{
+	color:#008000;
+}
+#vinculo{
+	color:#1c79d7;
 }
 #guardar{
 	margin-top:50px;
@@ -21,4 +45,10 @@ body{
 
 #formulario{
 	margin-top:10px;
+}
+
+#tablaIndex{
+	width: 350px;
+	
+	
 }
